# InnoBootCamp

./: CMakeLists.txt  main.cpp
tasks/1/: one.cpp
tasks/2/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
tasks/3/: Graphs.cpp
tasks/4/: Task1.cpp  Task2.cpp  Task3.cpp
