cmake_minimum_required(VERSION 3.17)
project(InnoBootCamp)

set(CMAKE_CXX_STANDARD 20)

# Just write (#) in the beginning of executable file's row to hide its.
# And delete (#) in the beginning of executable file, that you need

#add_executable(InnoBootCamp tasks//1//one.cpp)
#add_executable(InnoBootCamp tasks//2//Task1.cpp)
#add_executable(InnoBootCamp tasks//2//Task2.cpp)
#add_executable(InnoBootCamp tasks//2//Task3.cpp)
add_executable(InnoBootCamp tasks//2//Task4.cpp)
#add_executable(InnoBootCamp tasks//2//Task5.cpp)

#add_executable(InnoBootCamp main.cpp)